--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
+
 .App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  font-family: sans-serif;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h4,
+p {
+  margin: 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p {
+  font-size: 0.75em;
+  color: gray;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input-wrap {
+  width: 81vw;
+}
+
+input {
+  width: 60%;
+  text-align: center;
+}
+
+.list-item {
+  display: flex;
+  border: black 2px solid;
+  width: 80vw;
+  min-width: 200px;
+  min-height: 80px;
+  max-height: 80px;
+  height: 18vh;
+  margin: 3px;
+  padding: 2px;
+}
+
+.picture {
+  width: 80px;
+  height: 80px;
+}
+
+.content {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: flex-start;
+  margin-left: 5px;
+  width: 100%;
+  height: 100%;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
