--- a/src/App.css
+++ b/src/App.css
@@ -9,49 +9,103 @@
   text-align: center;
 }
 
-h4,
-p {
-  margin: 0;
-}
-
-p {
-  font-size: 0.75em;
-  color: gray;
-}
-
-.input-wrap {
-  width: 81vw;
-}
-
-input {
-  width: 60%;
+.header {
+  border: solid#89CFF0 5px;
+  height: 10%;
   text-align: center;
 }
 
-.list-item {
+.header2 {
+  border: solid#89CFF0 5px;
+  height: 10%;
+  text-align: center;
+}
+
+.searchBar {
+  border: solid green 5px;
+  height: 10%;
+}
+
+.employeeList {
+  border: solid #ac299a 5px;
+  height: 80%;
+}
+
+.employeeListItem {
   display: flex;
-  border: black 2px solid;
-  width: 80vw;
-  min-width: 200px;
-  min-height: 80px;
-  max-height: 80px;
-  height: 18vh;
-  margin: 3px;
-  padding: 2px;
+  text-align: left;
+  border: solid red 4px;
+  height: 10%;
 }
 
-.picture {
-  width: 80px;
-  height: 80px;
-}
-
-.content {
+.employeeTitle {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: flex-start;
-  margin-left: 5px;
-  width: 100%;
-  height: 100%;
 }
 
+.employeeTitle employeeTitle {
+  font-size: 25px;
+}
+
+.employeeName {
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.employeePhoto {
+  margin-right: 10px;
+  text-align: center;
+  height: 5px;
+
+}
+
+.singleEmployeePhoto {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin-right: 16px;
+}
+
+.photoTitleContainer {
+  display: flex;
+  padding: 25px;
+  justify-content: center;
+  align-items: center;
+}
+
+.contactInformationContainer {
+  display: flex;
+  padding: 25px;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+  border-top: 2px solid lightgray;
+  border-bottom: 2px solid lightgray;
+}
+
+.contactInformationContainer p {
+  font-weight: bold;
+  text-align: left;
+}
+
+.contactInformationContainer img {
+  width: 100px;
+  height: 100px;
+}
+
+.employeeListItem img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+}
+
+.headerContainer {
+  display: flex;
+  padding: 25px;
+}
+
+.headerContainer img {
+  width: 100px;
+  height: 100px;
+}
